--- a/www/css/index.css
+++ b/www/css/index.css
@@ -115,5 +115,9 @@ h1 {
 }
 
 /** CUSTOM CSS **/
+/** general **/
+.navbar a.ui-btn.ui-btn-icon-right.ui-icon-carat-r { background-color: #fff; color: #4e6d8d; }
+.navbar .ui-icon-carat-r:after { background: none; }
+
 /** Locate us Page **/
 #locate-us .main-content p { text-transform: none; }
